# graphrag-project

./: README.md  build_graph_from_text.py  graphrag_basic.py  graphrag_qa.py  main.py  pyproject.toml  test_neo4j.py  test_neo4j_data.py  test_openai.py
data/: sample.txt
